--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   cached_video_player: ^2.0.4
   emoji_picker_flutter: ^1.6.1
   enough_giphy_flutter: ^0.4.0
+  agora_uikit: ^1.3.6
+  zego_uikit_prebuilt_call: ^3.13.5
+
 
 dev_dependencies:
   flutter_test:
