--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   enough_giphy_flutter: ^0.4.0
   agora_uikit: ^1.3.6
   zego_uikit_prebuilt_call: ^3.13.5
+  flutter_sound: ^9.2.13
+  permission_handler: 10.2.0
+  path_provider: ^2.1.1
+  audioplayers: ^4.1.0
 
 
 dev_dependencies:
